; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/pf/extr_pf_ioctl.c_pf_check_return.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/pf/extr_pf_ioctl.c_pf_check_return.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }

@PFIL_CONSUMED = common dso_local global i32 0, align 4
@PFIL_PASS = common dso_local global i32 0, align 4
@PFIL_DROPPED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.mbuf**)* @pf_check_return to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pf_check_return(i32 %0, %struct.mbuf** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.mbuf**, align 8
  store i32 %0, i32* %4, align 4
  store %struct.mbuf** %1, %struct.mbuf*** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %15 [
    i32 128, label %7
  ]

7:                                                ; preds = %2
  %8 = load %struct.mbuf**, %struct.mbuf*** %5, align 8
  %9 = load %struct.mbuf*, %struct.mbuf** %8, align 8
  %10 = icmp eq %struct.mbuf* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i32, i32* @PFIL_CONSUMED, align 4
  store i32 %12, i32* %3, align 4
  br label %26

13:                                               ; preds = %7
  %14 = load i32, i32* @PFIL_PASS, align 4
  store i32 %14, i32* %3, align 4
  br label %26

15:                                               ; preds = %2
  %16 = load %struct.mbuf**, %struct.mbuf*** %5, align 8
  %17 = load %struct.mbuf*, %struct.mbuf** %16, align 8
  %18 = icmp ne %struct.mbuf* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %15
  %20 = load %struct.mbuf**, %struct.mbuf*** %5, align 8
  %21 = load %struct.mbuf*, %struct.mbuf** %20, align 8
  %22 = call i32 @m_freem(%struct.mbuf* %21)
  %23 = load %struct.mbuf**, %struct.mbuf*** %5, align 8
  store %struct.mbuf* null, %struct.mbuf** %23, align 8
  br label %24

24:                                               ; preds = %19, %15
  %25 = load i32, i32* @PFIL_DROPPED, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %24, %13, %11
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @m_freem(%struct.mbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
